--- a/.config.json
+++ b/.config.json
@@ -4,5 +4,11 @@
     "author": "Alexander Rymdeko-Harvey",
     "twitter": "Killswitch-GUI",
     "github_repo": "https://github.com/killswitch-GUI/SimplyDomain"
+  },
+  "bing_search": {
+    "start_count": 1,
+    "end_count": 100,
+    "sleep_time": 3,
+    "sleep_jitter": 0.30
   }
 }
