--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ sudo: ture
 language: python
 python:
   - 3.6
-install:
-  - pip install coveralls
-  - pip install coverage
-  - pip install nose
+# install: 
 script:
   - "curl -s https://raw.githubusercontent.com/SimplySecurity/SimplyDomain/master/setup/oneline-setup.sh | bash"
   - "cd SimplyDomain"
   - "source SD/bin/activate"
   - "python3.6 ./SimplyDomain.py -l"
+  - "pip install nose"
+  - "pip install coverage"
+  - "pip install coveralls"
   - nosetests --with-coverage
 after_success:
   - coveralls
